--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">info_fastlink@vrsystemz.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+923303746660</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>For appointment Kindly make your request at this number: 0325-3099447</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://web.facebook.com/fastlink2012" class="facebook" target="blank"><i class="bi bi-facebook"></i></a>
@@ -335,7 +335,7 @@
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-arch"></i></div>
               <h4>Recruitment Services</h4> -->
-              <div class="col-lg-12"><img src="assets/img/recruitment.PNG" alt="recriutment"/></div>
+              <div class="col-lg-12"><img src="assets/img/recruitment-services.jpeg" width="40%" alt="recriutment"/></div>
               <p class="mt-5"> At Fast-Link HR Consulting, we eat, breathe, and live recruitment. With more than 4 years of industry experience, we have successfully carved a niche which has made us one of the leading recruitment firms in Dubai. Our unique approach towards traditional recruitment processes is what sets us apart.
                 We provide partial to complete recruitment services to companies of different sizes and industries. Our experienced and talented recruiters can help your organization successfully close any number of vacant positions seamlessly.
                </p>
@@ -369,7 +369,7 @@
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-arch"></i></div>
               <h4>International Recruitment</h4> -->
-              <div class="col-lg-12"><img src="assets/img/career.PNG" alt="international recruitment"/></div>
+              <div class="col-lg-12"><img src="assets/img/international-recruitment.jpeg"  width="40%" alt="international recruitment"/></div>
               <p class="mt-5">Regarded as one of the best recruitment agencies for Gulf region career in Pakistan, Fast-Link HR Consulting, helps organizations with their ever-increasing demand for global talents. Thanks to our talented recruiters and successful outcomes, we have been successfully providing over 500 global clients with our international recruitment solutions for more than a decade now.
                 As a Middle East recruitment agency, we take it upon ourselves to find the best suited candidates for your company's recruitment needs. Whether your company requires a trainee engineer, a senior consultant, or an CEO; we fulfill your hiring requirements by going beyond geographical boundaries.
                 <p>
@@ -426,7 +426,7 @@
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-arch"></i></div>
               <h4>Career Support Services</h4> -->
-              <div class="col-lg-12"><img src="assets/img/career.PNG" alt="career support"/></div>
+              <div class="col-lg-12"><img src="assets/img/career-support.jpeg" width="40%" alt="career support"/></div>
               <p class="mt-5">Apart from the greater responsibilities of handling end-to-end recruitment lifecycle, Fast-Links  HR Consulting also render valuable career support services in Dubai. Fast-Links 's insightful career support services can help take your your career to the next level whether you are a fresher or an experienced professional. We leverage our years of recruitment experience to help build a strong foundation for your career.
                 Once you decide to avail our career support services, our team spends considerable time in analysing your profile, skill sets, and career aspirations. We identify your strengths and weaknesses and work on them our reliable processes.                
                 </p>
@@ -481,7 +481,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+923303746660</p>
+              <p>0325-3099447</p>
             </div>
           </div>
 
@@ -489,11 +489,11 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-6 ">
+          <!-- <div class="col-lg-6 ">
             <iframe  class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.376576581749!2d67.02936461500255!3d24.850984884058388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f03fc15d72f%3A0xe4242b9cc169561c!2sWork%20Hall!5e0!3m2!1sen!2s!4v1643743957044!5m2!1sen!2s" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-          </div>
+          </div> -->
 
-          <div class="col-lg-6">
+          <div class="col-lg-8 m-auto">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col form-group">
@@ -537,7 +537,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Fastlink Consultancy<span>.</span></h3>
             <p>For Submitting Resume: apply_fastlink@vrsystemz.com</p>
-            <p class="mt-5">For Booking Appoinment: <br/>Call/Whats app +923303746660</p>
+            <p class="mt-5">For Booking Appoinment: <br/>Call/Whats app 0325-3099447</p>
             <!-- <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -677,6 +677,7 @@ arrowRight.addEventListener("click", function () {
 });
 
 startSlide();</script>
+
 </body>
 
 </html>
